k8s/examples/deployment-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman
spec:
  template:
    spec:
      containers:
        - name: pacman
