k8s/examples/ebee-mode-rollout-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman
spec:
  template:
    metadata:
      annotations:
        pacman.font.github.com/config-rollout: "ebee-mode-enabled"
